--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submit()">
+<!-- <form [formGroup]="form" (ngSubmit)="submit()">
   <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form"></formly-form>
-</form>
+</form> -->
+<router-outlet></router-outlet>
