--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     <mat-spinner></mat-spinner>
   </div>
   <div fxLayout="column" fxLayoutGap="20px" class="container" [formGroup]="loginForm" *ngIf="!isLoading"> 
-    <h1>Log In</h1>
+    <h1>Vendor Onboarding</h1>
     <span *ngIf="loginForm.get('email').touched && !loginForm.get('email').valid" class="error">! Email is required</span>
     <span *ngIf="loginForm.get('password').touched && !loginForm.get('password').valid" class="error">! Password is required</span>
     <span *ngIf="error">{{error}}</span>
@@ -19,6 +19,6 @@
       <i [ngClass]="(showIcon) ? 'fa fa-eye-slash' : 'fa fa-eye'" aria-hidden="true" (click)="onChange()"></i>
     </div>
    
-    <button mat-button (click)="onSubmit()" [disabled]="!loginForm.valid">Log In</button>
+    <button mat-button (click)="onSubmit()" [disabled]="!loginForm.valid">Login</button>
   </div> 
 </div>
