--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,8 @@
 button {
-    background-color: #1619ecc7;
-    // border: 2px solid #080bc5c7;
-    // color: white;
+  background-color: rgb(42 250 22 / 76%);
+  color: rgb(0 0 0 / 94%);
+    font-weight: bolder;
+    font-family: ui-serif;
     border-radius: 3px;
     padding: 10px;
     cursor: pointer;
@@ -45,12 +46,12 @@ button {
   
   .wrapper {
     height: 100%;
-    background: linear-gradient(120deg,#080bc5c7,#00d0ff);
+    background: linear-gradient(120deg,rgb(101 6 237 / 78%), #ba57df);
   }
   
   .container {
     // width: 500px;
-    border: 3px solid #ccc;
+    // border: 3px solid #ccc;
     padding: 30px;
     border-radius: 5px;
   }
