--- a/src/app/vendor-onboarding/vendor-onboarding.component.html
+++ b/src/app/vendor-onboarding/vendor-onboarding.component.html
@@ -1,3 +1,4 @@
+<mat-toolbar *ngIf="!vendorId" color="primary">Vendor Onboarding Form</mat-toolbar>
 <form [formGroup]="form" (ngSubmit)="submit()">
     <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form"></formly-form>
 </form>
