Added approv and reject for stepper

--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -1,4 +1,4 @@
-<app-toolbar></app-toolbar>
+<app-toolbar [badgeCount]="badgeCount"></app-toolbar>
 <!-- <h1> Summary Screen</h1> -->
 <div>
   <mat-form-field>
