feat: implemented aggrid

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
-body { padding: 10px; }
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css'; 
+body { 
+    padding: 10px; 
+}
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'ag-grid-community/dist/styles/ag-grid.css'; 
+@import 'ag-grid-community/dist/styles/ag-theme-balham.css'; 
