--- a/src/app/vendor-onboarding/vendor-onboarding.component.html
+++ b/src/app/vendor-onboarding/vendor-onboarding.component.html
@@ -2,4 +2,6 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
     <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form"></formly-form>
 </form>
-<!-- <button (click)="createNewForm()">Create new</button> -->
+<!-- <button (click)="createNewForm()">Create FORM Fields Config</button>
+<button (click)="createNewSchema()">Create FORM Schema</button> -->
+
